@@ -99,6 +99,7 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <version>${maven-surefire-plugin.version}</version>
                 <configuration>
+                    <argLine>--enable-preview</argLine>
                     <suiteXmlFiles>
                         <suiteXmlFile>SmokeSuite.xml</suiteXmlFile>
                     </suiteXmlFiles>
